log

Thu 14 Mar 2024 08:27:28 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
017ca6f
Thu 14 Mar 2024 08:27:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
36d4d78
Thu 14 Mar 2024 08:34:49 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
38528ab
Thu 14 Mar 2024 08:36:35 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|7
total_score: 0/70
947159e
Thu 14 Mar 2024 08:40:02 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
290fa70
Thu 14 Mar 2024 08:46:09 PM UTC: 
 exercises.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: variable ‘temporal’ set but not used [-Werror=unused-but-set-variable]
   33 |   int temporal;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
da0d291
Thu 14 Mar 2024 08:46:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: variable ‘temporal’ set but not used [-Werror=unused-but-set-variable]
   33 |   int temporal = 0;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fe69889
Thu 14 Mar 2024 08:54:49 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
d16e38c
Thu 14 Mar 2024 08:56:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7d09ed1
Thu 14 Mar 2024 09:08:14 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
91b4c5f
Fri 15 Mar 2024 07:37:48 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
17fda0b
Fri 15 Mar 2024 07:54:51 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4a75b4d
Fri 15 Mar 2024 08:00:47 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:7: error: ‘result’ redeclared as different kind of symbol
   65 |   int result[] = NULL;
      |       ^~~~~~
exercises.c:63:28: note: previous definition of ‘result’ with type ‘int *’
   63 |                        int result[])
      |                        ~~~~^~~~~~~~
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:33,
                 from exercises.c:5,
                 from test.c:1:
exercises.c:65:18: error: invalid initializer
   65 |   int result[] = NULL;
      |                  ^~~~
In file included from test.c:1:
exercises.c:65:7: error: variable ‘result’ set but not used [-Werror=unused-but-set-variable]
   65 |   int result[] = NULL;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4a433d1
Fri 15 Mar 2024 08:01:11 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|4
total_score: 30/70
6b07b07
Fri 15 Mar 2024 09:02:43 PM UTC: 
 exercises.c | 45 ++++++++++++++++++++++++++++++---------------
 1 file changed, 30 insertions(+), 15 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:61:7: error: expected ‘(’ before ‘}’ token
   61 |       }
      |       ^
      |       (
Compilation failed
ef7a5bd
Fri 15 Mar 2024 09:03:13 PM UTC: 
 exercises.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  0|4
total_score: 30/70
78c92d0
Fri 15 Mar 2024 09:05:10 PM UTC: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
test.c: In function ‘checkSorted’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
28d753c
Fri 15 Mar 2024 09:06:13 PM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  0|4
total_score: 30/70
82ac340
Fri 15 Mar 2024 09:14:21 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   55 |       if (arr[i] % 2 == 0)
      |       ^~
exercises.c:57:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   57 |         if (arr2 == NULL)
      |         ^~
cc1: all warnings being treated as errors
Compilation failed
b55fae1
Fri 15 Mar 2024 09:15:13 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   55 |       if (arr[i] % 2 == 0)
      |       ^~
exercises.c:57:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   57 |         (*newSize)++;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
9d4af30
Fri 15 Mar 2024 09:19:09 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
7d9ab26
